[package]
name = "oblivious_state_machine"
version = "0.5.0"
edition = "2021"
authors = ["victor.ermolaev@ing.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = [ "full" ] }
log = "0.4.14"
downcast-rs = "1.2.0"
thiserror = "1.0.24"
serde = { version = "1.0.145", features = [ "derive" ] }

tracing = { version = "0.1.36", optional = true }

[dev-dependencies]
anyhow = "1.0.40"
pretty_env_logger = "0.4.0"
tracing-subscriber = "0.3.15"

[features]
# default = ["tracing"]
tracing = ["dep:tracing"]
