[package]
name = "oblivious_state_machine"
description = "This crate defines an abstraction level to conveniently describe state machines."
version = "0.6.5"
edition = "2021"
authors = ["victor.ermolaev@ing.com"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/vnermolaev/oblivious-state-machine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = [ "sync", "time" ] }
log = "0.4.17"
downcast-rs = "1.2.0"
serde = { version = "1.0.145", features = [ "derive" ] }
tracing = { version = "0.1.36", optional = true }
thiserror = "1.0.37"

[dev-dependencies]
tokio = { version = "1.21.2", features = [ "rt", "macros" ] }
pretty_env_logger = "0.4.0"
tracing-subscriber = "0.3.15"

[features]
# default = ["tracing"]
tracing = ["dep:tracing"]
