[package]
name = "oblivious_state_machine"
description = "This crate defines an abstraction level to conveniently describe state machines."
version = "0.6.6"
edition = "2021"
authors = ["victor.ermolaev@ing.com"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/vnermolaev/oblivious-state-machine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
log = "0.4.17"
thiserror = "1.0.40"
futures = "0.3.28"

[dev-dependencies]
anyhow = "1.0.70"
pretty_env_logger = "0.4.0"
tokio = { version = "1.27.0", features = [ "sync", "rt", "macros" ] }
